# macrobasev

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: docs.yml  python.yml
docs/: README.md  mkdocs.yml  release-checklist.md
docs/source/: architecture.md  configuration.md  index.md  pipelines.md
docs/source/api/: command-line.md
docs/source/tutorials/: csv-ingestion.md  cubed-analysis.md  explanation-interpretation.md
examples/: quickstart.ipynb  streamlit_app.py  visualization.ipynb
macrobase_py/: __init__.py  api.py
macrobase_py/classifiers/: __init__.py  aggregated.py  base.py  mean_shift.py  percentile.py  predicate.py
macrobase_py/data/: __init__.py  loader.py
macrobase_py/explainers/: __init__.py  apriori.py  base.py  explanations.py  heuristic.py
macrobase_py/metrics/: __init__.py  core.py
macrobase_py/pipeline/: __init__.py  base.py  config.py  pipelines.py
macrobase_py/summarizers/: __init__.py  thresholds.py
macrobase_py/tests/: test_loader.py
macrobase_py/utils/: __init__.py  functional_dependency.py
macrobase_py/viz/: __init__.py  renderers.py
tests/: conftest.py  test_classifiers.py  test_functional_dependency.py  test_metrics.py  test_summarizers.py
tools/: __init__.py
