[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macrobasev"
dynamic = ["version"]
description = "Python analysis utilities that accompany the MacroBase project"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "MacroBase Contributors"}]
keywords = ["macrobase", "anomaly detection", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "psycopg2",
    "matplotlib",
    "pandas",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "bump2version",
]

[project.urls]
Homepage = "https://github.com/stanford-futuredata/macrobase"
Source = "https://github.com/stanford-futuredata/macrobase"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "tools.__version__"}

[tool.setuptools.packages.find]
include = ["tools", "tools.*"]

[tool.setuptools.package-data]
"tools.bench" = ["*.conf", "*.txt", "matplotlibrc"]
