[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macrobasev"
dynamic = ["version"]
description = "Python analysis utilities that accompany the MacroBase project"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "MacroBase Contributors"}]
keywords = ["macrobase", "anomaly detection", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "psycopg2",
    "matplotlib",
    "pandas",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "bump2version",
]

[project.urls]
Homepage = "https://github.com/stanford-futuredata/macrobase"
Source = "https://github.com/stanford-futuredata/macrobase"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "tools.__version__"}

[tool.setuptools.packages.find]
include = ["tools", "tools.*"]

[tool.setuptools.package-data]
"tools.bench" = ["*.conf", "*.txt", "matplotlibrc"]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "macrobase-py"
version = "0.1.0"
description = "Python tooling for the MacroBase ecosystem"
readme = "README.md"
authors = [
  { name = "MacroBase Contributors" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "scikit-learn>=1.2",
  "scipy>=1.9"
]

[project.optional-dependencies]
arrow = ["pyarrow>=9"]

[project.urls]
Homepage = "https://github.com/user/macrobasev"

[tool.hatch.build]
include = [
  "macrobase_py"
]

[tool.hatch.envs.default]
dependencies = [
  "pre-commit>=3.6",
  "pytest>=7.4"
]

[tool.hatch.envs.default.scripts]
lint = "pre-commit run --all-files"
test = "pytest"

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
